--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,4 +82,16 @@
         app:layout_constraintHorizontal_bias="0.937"
         app:layout_constraintStart_toStartOf="@+id/loginbtn"
         app:layout_constraintTop_toBottomOf="@+id/password" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/google"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="28dp"
+        android:backgroundTint="@color/boton"
+        android:drawableLeft="@drawable/ic_google"
+        android:text="Google"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/updateUser" />
 </androidx.constraintlayout.widget.ConstraintLayout>
